fix: add gap to toolbar

--- a/src/editor/styles/themerPreview.scss
+++ b/src/editor/styles/themerPreview.scss
@@ -20,4 +20,5 @@
 	justify-content: flex-end;
 	border-bottom: #ccc 1px solid;
 	padding: 10px;
+	gap: 6px;
 }
